[EDELIVERY-6099] addressing PR comments and JUnit tests
