# Domibus-MSH-swagger/src/main/webapp/swagger.json
@@ -347,6 +347,79 @@
       }
     },
     "/ext/party" : {
+      "get" : {
+        "tags" : [ "party" ],
+        "summary" : "Get Parties",
+        "description" : "Get Parties using certain criteria like name, endpoint, partyId, process name. Use pageStart and pageSize for pagination purposes",
+        "operationId" : "listParties",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/PartyDTO"
+              }
+            }
+          }
+        },
+        "security" : [ {
+          "basicAuth" : [ ]
+        } ]
+      },
+      "post" : {
+        "tags" : [ "party" ],
+        "summary" : "Creates a Party",
+        "description" : "Creates a Party using name, party id, endpoint and identifiers which are mandatory fields",
+        "operationId" : "createParty",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/PartyDTO"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "string"
+            }
+          },
+          "201" : {
+            "description" : ""
+          }
+        },
+        "security" : [ {
+          "basicAuth" : [ ]
+        } ]
+      },
+      "put" : {
+        "tags" : [ "party" ],
+        "summary" : "Update a Party",
+        "description" : "Update a Party based on party name",
+        "operationId" : "updateParty",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/PartyDTO"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "string"
+            }
+          }
+        },
+        "security" : [ {
+          "basicAuth" : [ ]
+        } ]
+      },
       "delete" : {
         "tags" : [ "party" ],
         "summary" : "Delete a Party",
@@ -363,28 +436,6 @@
             "description" : "successful operation",
             "schema" : {
               "type" : "string"
-            }
-          }
-        },
-        "security" : [ {
-          "basicAuth" : [ ]
-        } ]
-      }
-    },
-    "/ext/party/list" : {
-      "get" : {
-        "tags" : [ "party" ],
-        "summary" : "Get Parties",
-        "description" : "Get Parties using certain criteria like name, endpoint, partyId, process name. Use pageStart and pageSize for pagination purposes",
-        "operationId" : "listParties",
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/PartyDTO"
-              }
             }
           }
         },
@@ -415,33 +466,6 @@
         } ]
       }
     },
-    "/ext/party/save" : {
-      "post" : {
-        "tags" : [ "party" ],
-        "summary" : "Creates a Party",
-        "description" : "Creates a Party using name, party id, endpoint and identifiers which are mandatory fields",
-        "operationId" : "createParty",
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/PartyDTO"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "object"
-            }
-          }
-        },
-        "security" : [ {
-          "basicAuth" : [ ]
-        } ]
-      }
-    },
     "/ext/party/{partyName}/certificate" : {
       "get" : {
         "tags" : [ "party" ],
@@ -458,7 +482,7 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/TrustStoreDTO"
+              "type" : "object"
             }
           }
         },
@@ -581,16 +605,6 @@
         "inputStream" : {
           "$ref" : "#/definitions/InputStream"
         },
-        "url" : {
-          "type" : "string",
-          "format" : "url"
-        },
-        "file" : {
-          "type" : "file"
-        },
-        "open" : {
-          "type" : "boolean"
-        },
         "readable" : {
           "type" : "boolean"
         },
@@ -600,6 +614,16 @@
         },
         "filename" : {
           "type" : "string"
+        },
+        "url" : {
+          "type" : "string",
+          "format" : "url"
+        },
+        "file" : {
+          "type" : "file"
+        },
+        "open" : {
+          "type" : "boolean"
         }
       }
     },
@@ -833,10 +857,6 @@
     "PartyDTO" : {
       "type" : "object",
       "properties" : {
-        "entityId" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
         "name" : {
           "type" : "string"
         },
@@ -929,10 +949,6 @@
     "ProcessDTO" : {
       "type" : "object",
       "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
         "name" : {
           "type" : "string"
         }
@@ -1000,31 +1016,6 @@
           }
         },
         "role" : {
-          "type" : "string"
-        }
-      }
-    },
-    "TrustStoreDTO" : {
-      "type" : "object",
-      "properties" : {
-        "name" : {
-          "type" : "string"
-        },
-        "subject" : {
-          "type" : "string"
-        },
-        "issuer" : {
-          "type" : "string"
-        },
-        "validFrom" : {
-          "type" : "string",
-          "format" : "date-time"
-        },
-        "validUntil" : {
-          "type" : "string",
-          "format" : "date-time"
-        },
-        "fingerprints" : {
           "type" : "string"
         }
       }
